Fix spacing on mobile for view all btn

--- a/packages/prop-house-webapp/src/components/CarouselSection/CarouselSection.module.css
+++ b/packages/prop-house-webapp/src/components/CarouselSection/CarouselSection.module.css
@@ -17,10 +17,3 @@
   font-size: 30px;
   font-weight: 600;
 }
-
-@media (max-width: 992px) {
-  .titleRow {
-    align-items: flex-start;
-    flex-direction: column;
-  }
-}
